<resources>
    <string name="app_name">BlogATEC</string>
    <string name="login_title_text">Welcome to\n Blog ATEC</string>
    <string name="pass_hint">password</string>
    <string name="email_hint">email</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_tex" />
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="register_title_text">"Create a new Account\nBlog ATEC "</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">password</string>
    <string name="reg_confirm_pass_text">confirm password</string>
    <string name="reg_email_text">email</string>
    <string name="setup_name_hint">Name</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_account_text">Account</string>
    <string name="post_desc_hint">Add Description</string>
    <string name="new_post_btn_hint">Post Blog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_text_hint">Search here</string>
    <string name="account_name_hint">Name</string>
    <string name="account_email_hint">Email</string>
</resources>
