<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/regPageLogo"
        android:layout_width="243dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/register_title_text"
        android:textColor="@color/colorBlueTitle"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/reg_email_text"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/colorBlueTitle"
        android:textColorHint="@color/colorBlueTitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPageLogo" />

    <EditText
        android:id="@+id/reg_confirm_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/reg_confirm_pass_text"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/colorBlueTitle"
        android:textColorHint="@color/colorBlueTitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/reg_btn_bg"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/reg_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/colorBlueTitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_pass" />

    <Button
        android:id="@+id/reg_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/reg_login_btn_bg"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/reg_login_text"
        android:textAllCaps="false"
        android:textColor="@color/colorBlueTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/reg_pass_text"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/colorBlueTitle"
        android:textColorHint="@color/colorBlueTitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

</androidx.constraintlayout.widget.ConstraintLayout>